# fastcord

./: .gitignore  .infisical.json  .mise.toml  .pre-commit-config.yaml  Taskfile.yml  docker-compose.yml  pg.Dockerfile
api/: .env.example  Dockerfile  alembic.ini  docker-entrypoint.dev.sh  docker-entrypoint.sh  go.mod  go.sum  manage.py  pyproject.toml  sqlc.yaml
api/api/: admin.py  enums.py  urls.py
api/api/fixtures/: channels.yaml  guilds.yaml
api/api/migrations/: 0001_initial.py  0002_alter_emoji_name_alter_guild_name.py
api/api/models/: __init__.py  base.py  channels.py  emojis.py  guilds.py  messages.py  users.py
api/api/serializers/: __init__.py  channels.py  emojis.py  guilds.py  messages.py  users.py
api/api/views/: __init__.py  channels.py  emojis.py  guilds.py  messages.py  users.py
api/app/: app.py  auth.py  settings.py
api/app/db/: queriers.py  utils.py
api/app/db/migrations/: env.py  script.py.mako
api/app/db/migrations/versions/: 2025_04_19_1637-2d67213139f2_init.down.sql  2025_04_19_1637-2d67213139f2_init.py  2025_04_19_1637-2d67213139f2_init.up.sql
api/app/db/queries/: guilds.sql  users.sql
api/app/routers/: auth.py  guilds.py  users.py
api/app/schemas/: auth.py  guilds.py  users.py  validators.py
api/controllers/: guildsController.go
api/database/: database.go
api/docs/: docs.go  swagger.json
api/fastcord/: asgi.py  settings.py  urls.py  wsgi.py
api/internal/validation/: validation.go
api/internal/validation/models/: guilds.go  pagination.go
api/sql/: guilds.sql
api_go/: .env.example  main.go
api_go/docs/: swagger.yaml
api_go/internal/sql/: guilds.sql.go  models.go
api_go/migrations/: 000001_create_initial_tables.up.sql
initdb/: create-pg-idkit.sql
ui/: .cta.json  README.md  biome.json  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
ui/src/: App.tsx  app.css  app.html  main.tsx  routeTree.gen.ts  styles.css  vite-env.d.ts
ui/src/api/: index.ts
ui/src/components/: DefaultCatchBoundary.tsx  DirectMessageList.tsx  GuildList.tsx
ui/src/hooks/: useAuth.ts
ui/src/lib/: api.ts
ui/src/routes/: +layout.svelte  __root.tsx  api.users.ts  index.lazy.tsx  index.tsx  posts.$postId.tsx  posts.route.tsx  posts_.$postId.deep.tsx  users.$userId.tsx  users.route.tsx
ui/src/store/: index.ts
ui/src/styles/: app.css
ui_sv/: .prettierrc.js  package.json  tailwind.config.ts  vite.config.ts
ui_sv/src/: app.css
ui_sv/src/lib/: api.ts
(+55 files in other folders)
